--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,10 @@
-@use 'vars' as v;
+@forward '../../node_modules/normalize.css/normalize.css';
 
-body {
-  font-family: v.$rc;
-}
+// your base styles
+@forward 'base';
+
+// connect all components
+@forward '../components/components';
+
+// connect all modules
+@forward '../modules/modules';
