доавил навигацию и background-image в hero секцию

--- a/src/modules/_modules.scss
+++ b/src/modules/_modules.scss
@@ -1,3 +1,5 @@
 // manually include the module style files
 @forward 'header/header';
 @forward 'footer/footer';
+@forward 'hero/hero';
+@forward 'nav/nav';
