--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,11 @@
+:root {
+  --font-primary: 'Roboto', sans-serif;
+  --color-white: #fff;
+  --color-black: #000;
+  --img-bcg: ('../img/bcg.png');
+  --container-width: 1315px;
+}
+
 .page { box-sizing: border-box; }
 
 .page,
@@ -14,7 +22,18 @@
 .page__body {
   display: flex;
   flex-direction: column;
+  font-family: var(--font-primary);
+  color: var(--color-white);
+  background-color: var(--color-black);
+  background-image: var(--img-bcg);
+  background-repeat: repeat;
 }
 
 .page__content { flex: auto; }
 .page__footer { flex-shrink: 0; }
+
+.container {
+  max-width: var(--container-width);
+}
+
+.fw-700 { font-weight: 700; }
