добавил main часть hero-секции и начал нижнюю часть

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -1,7 +1,8 @@
 .button {
+  min-height: 44px;
   padding: 10px 30px;
   border-radius: 50px;
-  border-color: transparent;
+  border: none;
   cursor: pointer;
   color: currentColor;
 
