--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,10 +1,14 @@
+@use '../../node_modules/sass-rem/' as *;
+@use '../styles/vars' as *;
 :root {
   --font-primary: 'Roboto', sans-serif;
   --color-white: #fff;
   --color-black: #000;
+  --color-dark: #121212;
   --img-bcg: ('../img/bcg.png');
-  --container-width: 1315px;
+  --container-width: 1300px;
 }
+
 
 .page { box-sizing: border-box; }
 
@@ -24,6 +28,7 @@
   flex-direction: column;
   font-family: var(--font-primary);
   color: var(--color-white);
+  line-height: 1.4;
   background-color: var(--color-black);
   background-image: var(--img-bcg);
   background-repeat: repeat;
@@ -33,7 +38,23 @@
 .page__footer { flex-shrink: 0; }
 
 .container {
+  width: 100%;
   max-width: var(--container-width);
+  margin: 0 auto;
 }
 
-.fw-700 { font-weight: 700; }
+.title { 
+  font-weight: 700;
+  line-height: 1.4;
+  &_h1 { font-size: rem(64px); }
+  &_h2 { font-size: rem(48px); }
+  &_h3 { font-size: rem(24px); }
+}
+
+.fw-700 { font-weight: 700 ; }
+
+.text-transp-40 { color: rgba($color-white, .4) }
+.text-transp-50 { color: rgba($color-white, .5) }
+.text-transp-80 { color: rgba($color-white, .8) }
+
+.bgc-transp-30 { color: rgba($color-white, .3) }
