--- a/src/modules/hero/_hero.scss
+++ b/src/modules/hero/_hero.scss
@@ -1,8 +1,37 @@
 .hero {
   min-height: 960px;
-  padding: 40px 80px 0;
+  display: flex;
+  flex-flow: column nowrap;
+  padding-top: 40px;
   background-color: #000;
   background-image: url(../img/hero-background.jpg);
   background-position: top right;
   background-size: cover;
+
+  &__header {
+    max-width: 1760px;
+    margin-bottom: 190px;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+
+  &__main {
+    display: flex;
+    flex-flow: column nowrap;
+    margin-bottom: 218px;
+  }
+}
+
+.hero-main {
+  max-width: 920px;
+}
+
+.hero__bottom {
+  padding-top: 43px;
+  padding-bottom: 43px;
+  background-color: var(--color-dark);
+
+  &__container {
+    display: flex;
+  }
 }
